Color of the text

--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
   <body style="background-image: url(images/fon.jpeg); background-size: cover">
     <div style="text-align: center">
       <div>
-        <h1 style="color: rgb(74, 74, 161)">Стамбул</h1>
+        <h1 style="color: rgb(78, 78, 171)">Стамбул</h1>
       </div>
 
       <div
@@ -26,7 +26,7 @@
           text-align: justify;
           width: 900px;
           height: 650px;
-          background: white;
+          background: rgb(255, 255, 255);
           padding: 20px;
           line-height: 20px;
           font-weight: 500;
