--- a/Index.html
+++ b/Index.html
@@ -92,7 +92,12 @@
       <div style="margin-left: auto; margin-right: auto; width: 150px">
         <a
           href="Table/Index.html"
-          style="font-size: 24px; color: rgb(0, 0, 0); background: white"
+          style="
+            font-size: 24px;
+            color: rgb(0, 0, 0);
+            background: white;
+            text-decoration: none;
+          "
         >
           Таблица
         </a>
