--- a/Index.html
+++ b/Index.html
@@ -13,10 +13,7 @@
   </head>
   <body style="background-image: url(images/fon.jpeg); background-size: cover">
     <div style="text-align: center">
-      <div>
-        <h1 style="color: rgb(78, 78, 171)">Стамбул</h1>
-      </div>
-
+      <h1 style="color: rgb(78, 78, 171)">Стамбул</h1>
       <div
         style="
           color: rgb(0, 0, 0);
@@ -33,7 +30,8 @@
         "
       >
         <table>
-          <tr>
+          <tbody style="vertical-align: top">
+  
             <td style="width: 400px">
               <h2 style="text-align: center; color: rgb(74, 74, 161)">
                 Собор Святой Софии
@@ -72,6 +70,7 @@
               города
             </td>
           </tr>
+        </tbody>
         </table>
         <img
           style="width: 250px; height: 150px; padding-left: 30px"
